@@ -16,6 +16,8 @@ Added parameter -macAddress to New-BcContainer to enable setting the container M
 Added parameter -IP to New-BcContainer to enable setting the container IP Address
 Added parameter -hostIP to enable setting the host.containerhelper.internal IP address inside the container
 Added configuration mapNetworkSettings to set mappings of containernames to ip, macAddress, dns, network and hostIP
+Set -dns to "HostDNS" on New-BcContainer to add Host DNS Servers to the new container (needed for NAT containers on some networks)
+Added configuration AddHostDnsServersToNatContainers. Set this to true for New-BcContainer to automatically add the Host DNS Servers to NAT containers.
 
 3.0.11
 Issue #2378 When running BcContainerHelper without admin rights, the import of a certificate is now done in an elevated process (asking for permissions)
